    - NOTE: does not make a distinction between adjacent-only radiators and full-vessel radiators
    - Handles relevant module types
     - Stock: ModuleCoreHeat (Passive heat only), ModuleResourceConverter, ModuleActiveRadiator, ModuleResourceHarvester
     - NF Suite: FissionReactor, ModuleFusionCore
  - Customize settings with DynamicBatteryStorageSettings.cfg
- Fixed an older dll being shipped with the mod 

v1.0.1
------
- KSP 1.7.x rebuild
- Updated DynamicBatteryStorage to 1.4.1
- Updated B9PartSwitch to 2.7.0

v1.0.0
-------
- Final content update
- Updated ModuleManager to 4.0.2
- Some restructuring of files and assets, ensure you delete old NFE installations
- 3.75m battery was soft-deprecated, if you need one, there is a better one in Restock+
- Capacitors were completely remodeled and retextured
- Batteries were completely remodeled and retextured
- Nuclear fuel containers were retextured
- Nuclear reprocessor was partially remodeled and fully retextured
- ASRTG was retextured
- Tuned textures for reactors to be more consistent with Restock palette
- Most textures recompressed from source with higher quality compressor
- Capacitor module no longer uses legacy animations for indicator lights, uses ModuleColorChanger instead
- Nuclear fuel containers now animate lights depending on amount of fuel or waste in the container

v0.10.6
-------
- Add bulkhead profiles to missing parts (thanks Streetwind)
- Added German translation courtesy of Three_Pounds

v0.10.5
-------
- KSP 1.6.x
- Updated B9PartSwitch to 2.6.0
- Updated ModuleManager to 3.1.3
- Updated DynamicBatteryStorage to 1.4.0
- Small change to license of code/configs (MIT)

v0.10.4
-------
- Fixed an exploit where you could button mash the discharge capacitor button constantly for a net gain of EC
- Increased the minimum core temperature allowed for radioactive fuel transfer to 450 K

v0.10.3
-------
- KSP 1.5.0
- Updated B9PartSwitch to 2.4.5
- Updated ModuleManager to 3.1.0